--- a/ProjectSettings/Input.config
+++ b/ProjectSettings/Input.config
@@ -197,6 +197,18 @@
       "KeyboardCode": "Y",
       "GamepadCode": "None",
       "GroupName": "Other"
+    },
+    {
+      "Name": "Inspect",
+      "KeyboardCode": "g",
+      "GamepadCode": "None",
+      "GroupName": "Other"
+    },
+    {
+      "Name": "Mode",
+      "KeyboardCode": "b",
+      "GamepadCode": "None",
+      "GroupName": "Other"
     }
   ],
   "__guid": "24003099-00eb-450b-b1b4-4b1faa85eeb1",
