--- a/ProjectSettings/Collision.config
+++ b/ProjectSettings/Collision.config
@@ -1,9 +1,12 @@
 {
+  "Version": 2,
   "Defaults": {
     "solid": "Collide",
     "trigger": "Trigger",
     "ladder": "Ignore",
-    "water": "Trigger"
+    "water": "Trigger",
+    "player": "Unset",
+    "sound": "Unset"
   },
   "Pairs": [
     {
@@ -22,18 +25,23 @@
       "r": "Trigger"
     },
     {
-      "a": "solid",
-      "b": "trigger",
-      "r": "Collide"
-    },
-    {
       "a": "playerclip",
       "b": "solid",
       "r": "Collide"
+    },
+    {
+      "a": "solid",
+      "b": "sound",
+      "r": "Collide"
+    },
+    {
+      "a": "player",
+      "b": "sound",
+      "r": "Ignore"
     }
   ],
   "__guid": "6a32efd6-dd7e-4303-b344-bd9bf20b6a49",
   "__schema": "configdata",
   "__type": "CollisionRules",
-  "__version": 1
+  "__version": 2
 }
